src/objects/Workstream__c.object
<CustomObject>
    <description>Society workstreams</description>
    <fields>
        <fullName>Challange__c</fullName>
        <label>Challange</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Challanges__c</fullName>
        <label>Challanges</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Workstream description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Directorates__c</fullName>
        <label>Main Directorates</label>
        <picklist>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SMT_Lead__c</fullName>
        <label>SMT Lead</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Corporate Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of External Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of HR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Target_Year__c</fullName>
        <label>Target Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream_Lead__c</fullName>
        <label>Workstream Lead</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Workstream</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Challange__c</columns>
        <columns>Description__c</columns>
        <columns>SMT_Lead__c</columns>
        <columns>Target_Year__c</columns>
        <columns>Workstream_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workstream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workstreams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>